# synthmap

./: .gitignore  README.md  pyproject.toml  setup.cfg  train.ipynb  train_wseed.ipynb
cfg/: audio_param_vae.yaml  cli_timbre_transformer_vae.yaml  cli_timbre_vae.yaml  param_vae.yaml  param_vae_timbre.yaml  soundmatch.yaml  soundmatch_lr1e-4.yaml  soundmatch_transformer.yaml  vae_discrete.yaml
cfg/archive/: audio_ae.yaml  param_vae.yaml  soundmatch.yaml
cfg/data/: genetic.yaml  gpu_808.yaml  snare_808.yaml  snare_808_noaudio.yaml
cfg/features/: feature_extractor.yaml  spectral_features.yaml
cfg/loss/: audio_regularization.yaml  mae_mse_loss.yaml  spectral_regularizer.yaml  timbre_regularizer.yaml
cfg/models/: param_decoder_mlp.yaml  param_decoder_mlp_32in.yaml  param_decoder_transformer.yaml  param_encoder_mlp.yaml  param_encoder_transformer.yaml  param_projection.yaml  soundstream_att_enc.yaml  soundstream_encoder.yaml  transformer_encoder.yaml  vae.yaml
models/soundmatch_v1/: config.yaml
nbs/: 01_train.ipynb  02_params.ipynb  03_train_discrete.ipynb  04_matrix_distance.ipynb  05_model_inspect.ipynb  06_soundstream.ipynb  07_fad.ipynb  08_genetic_data.ipynb  09_transformer.ipynb  10_load_model.ipynb
scripts/: evaluate.py
synthmap/: callback.py  cli.py  data.py  feature.py  loss.py  model.py  params.py  task.py
synthmap/data/: fitness.py  genetic.py  synth.py
synthmap/models/: autoencoder.py  components.py  mlp.py  soundstream.py  transformer.py
synthmap/utils/: audio_utils.py  model_utils.py
