[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["synthmap"]

[project]
name = "synthmap"
version = "0.0.1"
dependencies = [
    "einops",
    "evotorch",
    "jsonargparse[signatures]>=4.18.0",
    "lightning",
    "matplotlib",
    "numpy",
    "torch",
    "torchaudio",
    "wandb",
]

[project.scripts]
synthmap = "synthmap.cli:main"
synthmap-train = "synthmap.cli:vae_match_target"

[project.optional-dependencies]
dev = [
    "black[jupyter]",
    "flake8",
    "pytest",
    "pytest-mock",
    "pre-commit",
    "pytest-cov",
    "nbstripout",
    "ipywidgets",
]
